--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
    },
    "outputs": [],
    "source": [
-    "countries.a # add code here"
+    "countries.append('Thailand') # add code here\n",
+    "countries"
    ]
   },
   {
