automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,7 @@
    },
    "outputs": [],
    "source": [
-    "count # add code here"
+    "countries[6] = 'USA' # add code here"
    ]
   },
   {
