--- a/index.ipynb
+++ b/index.ipynb
@@ -467,12 +467,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = set(countries)"
    ]
   },
   {
