--- a/index.ipynb
+++ b/index.ipynb
@@ -466,11 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
